Prevent Youtube iframes to overflow

--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,4 @@
+#content iframe,
 #video-player iframe {
   max-width: 100% !important;
 }
